--- a/category-fashion.html
+++ b/category-fashion.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Sustainability Daily – Energy</title>
+  <title>Sustainability Daily – Fashion</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -12,7 +12,7 @@
       <div class="logo-icon">SD</div>
       <div class="logo-text">
         <span class="logo-title">Sustainability Daily</span>
-        <span class="logo-subtitle">Energy</span>
+        <span class="logo-subtitle">Fashion</span>
       </div>
     </div>
 
