--- a/category-transport.html
+++ b/category-transport.html
@@ -18,10 +18,10 @@
 
     <nav class="top-nav">
       <a href="index.html" class="nav-link">Home</a>
-      <a href="category-energy.html" class="nav-link active">Energy</a>
+      <a href="category-energy.html" class="nav-link">Energy</a>
       <a href="category-fashion.html" class="nav-link">Fashion</a>
       <a href="category-food.html" class="nav-link">Food</a>
-      <a href="category-transport.html" class="nav-link">Transport</a>
+      <a href="category-transport.html" class="nav-link active">Transport</a>
       <a href="category-water.html" class="nav-link">Water</a>
     </nav>
 
@@ -34,10 +34,10 @@
   <main class="main-single">
     <section class="panel panel-highlight">
       <h1 class="section-title">
-        Energy tips
+        Transport tips
       </h1>
       <p class="section-subtitle">
-        Simple changes at home and work can dramatically cut your energy impact.
+        Move efficiently and lower your travel footprint.
       </p>
 
       <ul class="tips-list">
