--- a/index.html
+++ b/index.html
@@ -95,6 +95,16 @@
           </div>
         </a>
 
+        <a href="category-waste.html" class="category-card">
+          <div class="category-icon">♻️</div>
+          <div class="category-content">
+            <h3 class="category-title">Waste</h3>
+            <p class="category-description">
+              Reduce waste, recycle smarter, and make mindful disposal choices.
+            </p>
+          </div>
+        </a>
+
         <a href="category-water.html" class="category-card">
           <div class="category-icon">💧</div>
           <div class="category-content">
