--- a/category-water.html
+++ b/category-water.html
@@ -22,6 +22,7 @@
       <a href="category-fashion.html" class="nav-link">Fashion</a>
       <a href="category-food.html" class="nav-link">Food</a>
       <a href="category-transport.html" class="nav-link">Transport</a>
+      <a href="category-waste.html" class="nav-link">Waste</a>
       <a href="category-water.html" class="nav-link active">Water</a>
     </nav>
 
