--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
   <main class="main-layout">
     <!-- Left: Daily tip & notification -->
     <section class="panel panel-highlight">
-      <h1 class="section-title">Your tip of the moment</h1>
+      <h1 class="section-title">Tip of the Day</h1>
       <p class="section-subtitle">
-        Discover a quick action you can take today.
+        A daily action to help you live more sustainably.
       </p>
 
       <div class="tip-card" id="tipCard">
