--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <!-- Right: Categories -->
     <section class="panel panel-categories">
-      <h2 class="section-title">Explore sustainability by topic</h2>
+      <h2 class="section-title">Explore sustainability by domain</h2>
 
       <div class="category-grid">
         <a href="category-energy.html" class="category-card">
